--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,10 @@
         "psr/http-server-handler": "^1.0",
         "psr/event-dispatcher": "^1.0",
         "psr/log": "^3.0",
-        "psr/cache": "^3.0"
+        "psr/cache": "^3.0",
+        "ext-fileinfo": "*",
+        "psr/http-factory": "^1.0",
+        "psr/http-server-middleware": "^1.0.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
