--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "psr/cache": "^3.0",
         "ext-fileinfo": "*",
         "psr/http-factory": "^1.0",
-        "psr/http-server-middleware": "^1.0.2"
+        "psr/http-server-middleware": "^1.0.2",
+        "filp/whoops": "^2.17.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
