--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "ext-fileinfo": "*",
         "psr/http-factory": "^1.0",
         "psr/http-server-middleware": "^1.0.2",
-        "filp/whoops": "^2.17.0"
+        "filp/whoops": "^2.17.0",
+        "ext-openssl": "*",
+        "symfony/yaml": "^v7.2.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
